# SmartCalc_v2

./: .gitignore  .vimspector.json  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  clang_custom.sh  compile_flags.txt  dvi.html  session.vim
code_c/: s21_credit_calc.c  s21_credit_calc.h  s21_smart_calc.c  s21_smart_calc.h  s21_stack.c  s21_stack.h
code_c/gcov_obj/: s21_credit_test.c  s21_smart_calc_test.c  s21_stack_test.c
includes/: calculationsmartcalc.hpp  creditcalculator.hpp  custom_types.hpp
includes/Controller/: calculatorcontroller.hpp  creditcontroller.hpp  depositcontroller.hpp  graphcontroller.hpp  icalculatorcontroller.hpp  icreditcontroller.hpp  idepositcontroller.hpp  igraphcontroller.hpp
includes/Model/: coordinategraph.hpp  imodel.hpp  imodelcredit.hpp  imodeldeposit.hpp  imodelgraph.hpp  modelcalculator.hpp  modelcredit.hpp  modeldeposit.hpp  modelgraph.hpp  polishnotation.hpp  validatetext.hpp
includes/View/: calculator.hpp  dialoggraph.hpp  mainwindow.hpp
srcs/: calculationsmartcalc.cc  creditcalculator.cc  creditcalculator.cpp  main.cc  main.cpp
srcs/Controller/: calculatorcontroller.cc  creditcontroller.cc  depositcontroller.cc  graphcontroller.cc
srcs/Model/: coordinategraph.cc  depositcontroller.cc  modelcalculator.cc  modelcredit.cc  modeldeposit.cc  modelgraph.cc  polishnotation.cc  validatetext.cc
srcs/View/: calculator.cc  calculator.ui  dialoggraph.cc  dialoggraph.ui  mainwindow.cpp  mainwindow.ui
tests/: CMakeLists.txt
tests/includes/: tst_model_calculator.hpp  tst_model_credit.hpp  tst_model_deposit.hpp  tst_polishnotation.hpp  tst_validatortext.hpp
tests/srcs/: main.cc  tst_model_calculator.cc  tst_model_credit.cc  tst_model_deposit.cc  tst_polishnotation.cc  tst_validatortext.cc
tests/test_model_calculator/: CMakeLists.txt
tests/test_model_calculator/includes/: tst_model_calculator.hpp
tests/test_model_calculator/srcs/: tst_model_calculator.cc
tests/test_model_credit/: CMakeLists.txt
tests/test_model_credit/includes/: tst_model_credit.hpp
tests/test_model_credit/srcs/: tst_model_credit.cc
tests/test_model_deposit/: CMakeLists.txt
tests/test_model_deposit/includes/: tst_model_deposit.hpp
tests/test_model_deposit/srcs/: tst_model_deposit.cc
tests/test_polishnotation/: CMakeLists.txt
tests/test_polishnotation/includes/: tst_polishnotation.hpp
tests/test_polishnotation/srcs/: tst_polishnotation.cc
tests/test_validatetext/: CMakeLists.txt
tests/test_validatetext/includes/: tst_validatortext.hpp
tests/test_validatetext/srcs/: tst_validatortext.cc
